ISPN-10568 docu for external service

--- a/documentation/asciidoc/titles/stories.adoc
+++ b/documentation/asciidoc/titles/stories.adoc
@@ -7,3 +7,4 @@ include::{stories}/assembly_deploying_operator.adoc[leveloffset=+1]
 endif::productized[]
 include::{stories}/assembly_creating_clusters.adoc[leveloffset=+1]
 include::{stories}/assembly_cluster_credentials.adoc[leveloffset=+1]
+include::{stories}/assembly_reference.adoc[leveloffset=+1]
