--- a/doc/design.adoc
+++ b/doc/design.adoc
@@ -347,9 +347,14 @@ https://infinispan.org/docs/dev/titles/security/security.html#security_embedded_
 |=======================
 | Field | Description | Scheme | Required | Default
 
-| `externalService`
-| External service that is accessible from other sites.
-| https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.11/#service-v1-core[coreV1.Service]
+| `expose`
+| For sites to communicate with each other,
+a dedicated externally exposed service needs to be configured.
+This section configures details of such service.
+The exposed service name will contain a `-site` suffix.
+If the site service is defined as `NodePort` type,
+it binds to port `7900` by default and uses port `32660` as `nodePort`.
+| https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.11/#servicespec-v1-core[core/v1/ServiceSpec]
 | true
 |
 
@@ -374,14 +379,18 @@ https://infinispan.org/docs/dev/titles/security/security.html#security_embedded_
 | `url`
 | URL for remote site.
 `xsite://` scheme denotes that the remote site is configured with static host:port combination.
-`openshift://` scheme denotes that site external setting sare extracted from the remote OpenShift host:port.
+`minikube://` scheme denotes that external site is a minikube instance and the setting are extracted from the remote Kubernetes host:port.
+`openshift://` scheme denotes that site external setting are extracted from the remote OpenShift host:port.
 | string
 | true
 |
 
 | `secret`
-| Only in use with OpenShift URLs.
-Contains the secret details for accessing remote OpenShift instances.
+| Contains the secret details for accessing remote Kubernetes or OpenShift instances.
+If the `url` starts with `minikube`,
+the secret should contain `certificate-authority`, `client-certificate` and `client-key` entries.
+A secret containing these certificates can be created using `kubectl create secret generic`,
+passing individual files using `--from-file` parameters.
 | string
 | false
 |
@@ -642,7 +651,7 @@ spec:
       storage: 2Gi
     sites:
       local:
-        externalService:
+        expose:
           type: LoadBalancer
           ports:
             - port: 12345
@@ -655,6 +664,9 @@ spec:
       - name: aws
         url: openshift://api.aws.host:6443
         secret: aws-identities
+      - name: minikube
+        url: minikube://192.168.99.148:8443
+        secret: minikube-identities
   container:
     extraJvmOpts: "-XX:NativeMemoryTracking=summary"
     cpu: "1000m"
@@ -694,4 +706,18 @@ stringData:
   identities.yaml: |-
     tokens:
     - LdqA1uM0e3wxhwOf0WRaP7Je3RdOjtrpai1jONQg7z0
+----
+
+.minikube-identities.yaml
+[source,yaml]
+----
+apiVersion: v1
+kind: Secret
+metadata:
+  name: minikube-identities
+type: Opaque
+data:
+  certificate-authority: <...>
+  client-certificate: <...>
+  client-key: <...>
 ----
