--- a/documentation/asciidoc/topics/cmd_examples/oc_get_pods.adoc
+++ b/documentation/asciidoc/topics/cmd_examples/oc_get_pods.adoc
@@ -1,4 +1,4 @@
-$ oc get pods
+$ {oc_get_pods}
 
 NAME                   READY     STATUS    RESTARTS   AGE
 {example_crd_name}-0        1/1       Running   0          1m
