--- a/documentation/asciidoc/topics/cmd_examples/oc_apply_connect_secret.adoc
+++ b/documentation/asciidoc/topics/cmd_examples/oc_apply_connect_secret.adoc
@@ -1,1 +1,1 @@
-$ oc apply -f {github_raw}{github_tag}/deploy/cr/auth/connect_secret.yaml
+$ {oc_apply_cr} {github_raw}{github_tag}/deploy/cr/auth/connect_secret.yaml
