--- a/documentation/asciidoc/topics/cmd_examples/oc_apply_cr_minimal.adoc
+++ b/documentation/asciidoc/topics/cmd_examples/oc_apply_cr_minimal.adoc
@@ -1,1 +1,1 @@
-$ oc apply -f {github_raw}{github_tag}/deploy/cr/minimal/cr_minimal.yaml
+$ {oc_apply_cr} {github_raw}{github_tag}/deploy/cr/minimal/cr_minimal.yaml
