--- a/documentation/asciidoc/topics/cmd_examples/oc_get_secret_creds_jp.adoc
+++ b/documentation/asciidoc/topics/cmd_examples/oc_get_secret_creds_jp.adoc
@@ -1,4 +1,4 @@
-$ oc get secret {example_crd_name}-generated-secret -n my_namespace \
+$ {oc_get_secret} {example_crd_name}-generated-secret -n my_namespace \
 -o jsonpath="{.data.identities\.yaml}" | base64 -D
 
 credentials:
