--- a/documentation/asciidoc/topics/proc_get_cluster_credentials.adoc
+++ b/documentation/asciidoc/topics/proc_get_cluster_credentials.adoc
@@ -1,23 +1,23 @@
 [id='getting_credentials-{context}']
-= Retrieving Cluster Credentials
-You can retrieve credentials for your {brandname} clusters as base64-encoded strings from secrets in your cluster namespace.
+= Retrieving Credentials
+Get base64-encoded credentials from the authentication secret.
 
-If you do not create secrets and credentials when you create clusters, the {ispn_operator} automatically generates them with the following defaults:
-
-* `developer` is the default application.
-* `{example_crd_name}-generated-secret` is the default authentication secret.
+Defaults::
+`{example_crd_name}-generated-secret` is the default authentication secret. +
+`developer` is the default application user.
 
 .Procedure
-* Retrieve credentials from the authentication secret.
+
+* Retrieve credentials from the default authentication secret as follows:
 +
 [source,options="nowrap",subs=attributes+]
 ----
-include::cmd_examples/oc_get_app_secret.adoc[]
+include::cmd_examples/oc_get_secret_creds.adoc[]
 ----
 +
-To base64 decode credentials, do the following:
+Do the following to base64 decode credentials:
 +
 [source,options="nowrap",subs=attributes+]
 ----
-include::cmd_examples/oc_get_app_secret_jp.adoc[]
+include::cmd_examples/oc_get_secret_creds_jp.adoc[]
 ----
