Docs for operator credentials #167

--- a/documentation/asciidoc/topics/cmd_examples/oc_get_secret_creds_jp.adoc
+++ b/documentation/asciidoc/topics/cmd_examples/oc_get_secret_creds_jp.adoc
@@ -4,3 +4,5 @@ $ {oc_get_secret} {example_crd_name}-generated-secret -n my_namespace \
 credentials:
 - username: developer
   password: dIRs5cAAsHIeeRIL
+- username: operator
+  password: uMBo9CmEdEduYk24
