--- a/documentation/asciidoc/topics/proc_get_cluster_credentials.adoc
+++ b/documentation/asciidoc/topics/proc_get_cluster_credentials.adoc
@@ -2,9 +2,10 @@
 = Retrieving Credentials
 Get base64-encoded credentials from the authentication secret.
 
-Defaults::
+Default credentials::
 `{example_crd_name}-generated-secret` is the default authentication secret. +
-`developer` is the default application user.
+`developer` is the default application user. +
+`operator` is an internal user that interacts with {brandname} clusters.
 
 .Procedure
 
