--- a/documentation/asciidoc/topics/ref_secret_auth.adoc
+++ b/documentation/asciidoc/topics/ref_secret_auth.adoc
@@ -13,6 +13,9 @@ include::yaml_annotated/secret_connect.yaml[]
 
 [IMPORTANT]
 ====
-Do not use example passwords from this documentation. You should always replace
+* You must include the `operator` user and specify a password. The {ispn_operator}
+requires these credentials to interact with {brandname} clusters.
+
+* Do not use example passwords from this documentation. You should always replace
 example credentials with ones that conform to the relevant security guidelines.
 ====
