--- a/documentation/asciidoc/stories/assembly_creating_clusters.adoc
+++ b/documentation/asciidoc/stories/assembly_creating_clusters.adoc
@@ -22,7 +22,8 @@ endif::productized[]
 ifndef::productized[]
 include::{topics}/proc_using_default_crs.adoc[leveloffset=+1]
 endif::productized[]
-include::{topics}/con_crd.adoc[leveloffset=+1]
+include::{topics}/ref_crd.adoc[leveloffset=+1]
+include::{topics}/ref_container_resources.adoc[leveloffset=+2]
 include::{topics}/proc_create_cluster_minimal.adoc[leveloffset=+1]
 include::{topics}/proc_verify_cluster.adoc[leveloffset=+1]
 
