--- a/doc/design.adoc
+++ b/doc/design.adoc
@@ -329,9 +329,9 @@ https://infinispan.org/docs/dev/titles/security/security.html#security_embedded_
 | true
 |
 
-| `remotes`
-| Remote site information.
-| []<<infinispanremotesitespec>>
+| `backups`
+| Site information for backups.
+| []<<infinispanbackupsitespec>>
 | true
 |
 
@@ -361,10 +361,10 @@ it binds to port `7900` by default and uses port `32660` as `nodePort`.
 |=======================
 
 
-[[infinispanremotesitespec]]
-#### `InfinispanRemoteSiteSpec`
+[[infinispanbackupsitespec]]
+#### `InfinispanBackupSiteSpec`
 
-`InfinispanRemoteSiteSpec`.
+`InfinispanBackupSiteSpec`.
 
 [options="header,footer"]
 |=======================
@@ -385,12 +385,14 @@ it binds to port `7900` by default and uses port `32660` as `nodePort`.
 | true
 |
 
-| `secret`
+| `secretName`
 | Contains the secret details for accessing remote Kubernetes or OpenShift instances.
 If the `url` starts with `minikube`,
 the secret should contain `certificate-authority`, `client-certificate` and `client-key` entries.
 A secret containing these certificates can be created using `kubectl create secret generic`,
 passing individual files using `--from-file` parameters.
+If the `url` starts with `openshift`,
+the secret should contain a `token` entry for accessing that OpenShift cluster.
 | string
 | false
 |
@@ -653,20 +655,18 @@ spec:
       local:
         expose:
           type: LoadBalancer
-          ports:
-            - port: 12345
-      remotes:
+      backups:
       - name: google
         url: xsite://google.host:23456
       - name: azure
         url: openshift://api.azure.host:6443
-        secret: azure-identities
+        secretName: azure-identities
       - name: aws
         url: openshift://api.aws.host:6443
-        secret: aws-identities
+        secretName: aws-identities
       - name: minikube
         url: minikube://192.168.99.148:8443
-        secret: minikube-identities
+        secretName: minikube-identities
   container:
     extraJvmOpts: "-XX:NativeMemoryTracking=summary"
     cpu: "1000m"
@@ -686,12 +686,7 @@ metadata:
   name: azure-identities
 type: Opaque
 stringData:
-  identities.yaml: |-
-    credentials:
-    - username: openshifazrusr
-      password: openshifazrpass
-    tokens:
-    - gl8xTESu_j_tzMQhpe_P-It6IcWFQUm94WsuR3VFkUw
+  token: gl8xTESu_j_tzMQhpe_P-It6IcWFQUm94WsuR3VFkUw
 ----
 
 .aws-identities.yaml
@@ -703,9 +698,7 @@ metadata:
   name: aws-identities
 type: Opaque
 stringData:
-  identities.yaml: |-
-    tokens:
-    - LdqA1uM0e3wxhwOf0WRaP7Je3RdOjtrpai1jONQg7z0
+  token: LdqA1uM0e3wxhwOf0WRaP7Je3RdOjtrpai1jONQg7z0
 ----
 
 .minikube-identities.yaml
