--- a/doc/design.adoc
+++ b/doc/design.adoc
@@ -55,6 +55,13 @@ This document describes the types introduced by the Infinispan Operator to be co
 | true
 |
 
+| `clusterStatus`
+| Desired cluster status. Can be `STARTED`(default) for a running cluster or
+`STOPPED` for graceful shutdown process.
+| `STARTED`/`STOPPED`
+| false
+| `STARTED`
+
 | `profile`
 | Profile in use. See <<infinispanprofiles,profiles>> for details.
 | `Default` / `Performance` / `Development`
