ISPN-10738 xsite repl docs

--- a/documentation/asciidoc/stories/assembly_deploying_operator.adoc
+++ b/documentation/asciidoc/stories/assembly_deploying_operator.adoc
@@ -3,7 +3,7 @@
 :context: deploying_manual
 
 You can manually deploy the {ispn_operator} as an alternative to installing it
-from link:https://www.operatorhub.io/[OperatorHub.io].
+from link:{link_operator_hub}.
 
 .Prerequisites
 include::{topics}/ref_cluster_admin.adoc[]
