--- a/documentation/asciidoc/stories/assembly_creating_clusters.adoc
+++ b/documentation/asciidoc/stories/assembly_creating_clusters.adoc
@@ -9,7 +9,7 @@ by defining custom resource objects in `yaml` format and applying them to
 .Prerequisites
 //Community
 ifndef::productized[]
-* Either install the {ispn_operator} from link:https://www.operatorhub.io/[OperatorHub.io] or link:#deploying_operator_manually[deploy it manually].
+* Either install the {ispn_operator} from link:{link_operator_hub} or link:#deploying_operator_manually[deploy it manually].
 * Have a `kubectl` client in your `$PATH`.
 endif::productized[]
 //Product
