--- a/documentation/asciidoc/titles/stories.adoc
+++ b/documentation/asciidoc/titles/stories.adoc
@@ -8,4 +8,5 @@ endif::productized[]
 include::{stories}/assembly_creating_clusters.adoc[leveloffset=+1]
 include::{stories}/assembly_configuring_authentication.adoc[leveloffset=+1]
 include::{stories}/assembly_encrypting_endpoints.adoc[leveloffset=+1]
+include::{stories}/assembly_xsite_replication.adoc[leveloffset=+1]
 include::{stories}/assembly_reference.adoc[leveloffset=+1]
