ISPN-10923 external service docs

--- a/documentation/asciidoc/stories/assembly_encrypting_endpoints.adoc
+++ b/documentation/asciidoc/stories/assembly_encrypting_endpoints.adoc
@@ -1,6 +1,6 @@
-[id='security_endpoints']
+[id='securing_endpoints']
 = Securing {brandname} Endpoints
-:context: security_endpoints
+:context: security
 Configure {brandname} pods to encrypt network traffic between clients and
 endpoints with TLS certificates.
 
