--- a/documentation/asciidoc/titles/stories.adoc
+++ b/documentation/asciidoc/titles/stories.adoc
@@ -6,6 +6,7 @@ ifndef::productized[]
 include::{stories}/assembly_deploying_operator.adoc[leveloffset=+1]
 endif::productized[]
 include::{stories}/assembly_creating_clusters.adoc[leveloffset=+1]
+include::{stories}/assembly_exposing_services.adoc[leveloffset=+1]
 include::{stories}/assembly_configuring_authentication.adoc[leveloffset=+1]
 include::{stories}/assembly_encrypting_endpoints.adoc[leveloffset=+1]
 include::{stories}/assembly_xsite_replication.adoc[leveloffset=+1]
