--- a/documentation/asciidoc/topics/attributes/community-attributes.adoc
+++ b/documentation/asciidoc/topics/attributes/community-attributes.adoc
@@ -11,6 +11,7 @@
 :github_tag: master
 
 :example_crd_name: example-infinispan
+:example_namespace: ispn-namespace
 
 include::oc_cmds.adoc[]
 include::links.adoc[]
