--- a/documentation/asciidoc/topics/attributes/product-attributes.adoc
+++ b/documentation/asciidoc/topics/attributes/product-attributes.adoc
@@ -10,6 +10,7 @@
 :github_tag: master
 
 :example_crd_name: example-rhdatagrid
+:example_namespace: rhdg-namespace
 
 include::oc_cmds.adoc[]
 include::links.adoc[]
