--- a/documentation/asciidoc/topics/proc_creating_sa_tokens.adoc
+++ b/documentation/asciidoc/topics/proc_creating_sa_tokens.adoc
@@ -72,4 +72,5 @@ After you add service account tokens to each backup site, the
 clusters can form cross-site views.
 
 .Reference
-link:{link_os_sa_tokens}.
+
+link:{link_os_sa_tokens}
