--- a/documentation/asciidoc/topics/attributes/product-attributes.adoc
+++ b/documentation/asciidoc/topics/attributes/product-attributes.adoc
@@ -103,11 +103,11 @@ include::links.adoc[]
 :openshiftplatform: Red Hat OpenShift Container Platform
 :ocp: OpenShift Container Platform
 :osweb: OpenShift Web Console
+:datagridservice: Data Grid service
+:cacheservice: Cache service
 
 //
 // Product only OpenShift
 //
 :osproduct: Red Hat Data Grid for OpenShift
 :osproductshort: Data Grid for OpenShift
-:datagridservice: datagrid-service
-:cacheservice: cache-service
